css/styles.css
html {
  scroll-behavior: smooth;
}

/* CSS Grids */

header {
  grid-area: myheader;
  background: #464343;
}
nav {
  grid-area: mynav;
}
main {
  grid-area: mymain;
}
footer {
  grid-area: myfooter;
  background: #1d2540;
}

/* Main elements */

body {
  font-family: "Commissioner", sans-serif;
  font-size: 1rem;
  margin: 0;
  height: 100%;
  width: 100%;
}

.body-wrapper {
  display: grid;
  grid-template-areas: "myheader myheader myheader" "mynav mynav mynav" "mymain mymain mymain" "myfooter myfooter myfooter";
  width: 100%;
  height: fit-content;
  min-height: 100%;
}

header {
  margin: 0;
  padding-top: 1rem;
  width: 100%;
  justify-content: space-around;
}

main {
  color: #fff;
  display: grid;
  grid-template-columns: 1fr auto 1fr;
  width: 100%;
  height: fit-content;
}

.body-wrapper > main {
  display: flex;
  flex-direction: column;
}

footer {
  bottom: 0;
  left: 0;
  width: 100%;
  display: flex;
  justify-content: space-around;
  gap: 3rem;
  color: #fff;
}

h1 {
  font-family: "Tourney", sans-serif;
  font-size: 2.3rem;
  color: #1d2540;
  background-color: #c5d1d9;
  width: auto;
  text-align: center;
  border-radius: 10px;
  margin-right: 1rem;
  margin-left: 1rem;
}

h2 {
  font-family: "Tourney", sans-serif;
  font-weight: "italic";
  font-size: 1.5rem;
  color: #1d2540;
}

.maingreybackground {
  background: #464343;
  max-width: auto;
  margin: 0 auto;
  padding-top: 2rem;
  padding-bottom: 6rem;
}

.header-first {
  width: 100%;
}

.header-third {
  flex: 1;
  justify-content: center;
}

.header-fourth {
  font-size: 2rem;
  color: #1d2540;
}

.right-nav-icon {
  padding-right: 1rem;
  padding-top: 0.8rem;
}

.universeofgames-container {
  max-width: 25%;
}

.searchbar-container {
  align-items: center;
  justify-content: center;
  display: flex;
  width: 10%;
}

.searchbar-pos {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50%;
  margin-left: 4rem;
}

.searchbar-pos > input {
  width: 80%;
  height: 50%;
  text-align: center;
}

.searchbar-pos > button {
  height: 60%;
  width: 5%;
}

/* Navigation */

nav {
  display: none;
  position: absolute;
  top: 195px;
}

.hamburger-menu {
  display: none;
}

.hamburger-label {
  float: left;
  color: #1d2540;
  padding: 10px;
  font-size: 2rem;
  display: block;
}

.hamburger-menu:checked ~ nav {
  display: block;
  background-color: #c5d1d9;
  border-radius: 0 0 5px 5px;
}

nav ul {
  padding: 0px;
}

nav li {
  display: block;
}

nav a {
  text-decoration: none;
  color: #1d2540;
  padding: 10px;
  display: block;
}

nav a:hover {
  text-decoration: underline;
}

.active {
  font-weight: bold;
}

.navigation-bar {
  background-color: #c5d1d9;
}

/* Icons */

.material-icons {
  position: relative;
  color: #1d2540;
}

.material-icons.md-48 {
  font-size: 3rem;
}

.material-icons.md-36 {
  font-size: 2.25rem;
}

.material-icons.md-24 {
  font-size: 1.5rem;
}

.material-icons.md-18 {
  font-size: 1.12rem;
}

/* Images */

.image-centered {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 12rem;
}

.background-images-blackreach {
  background: linear-gradient(rgb(0, 0, 0, 0.5), rgb(0, 0, 0, 0.5)), url("../images/blackreachbackground.jpg");
  background-size: cover;
  background-repeat: no-repeat;
}

.background-images-skyrim {
  background: linear-gradient(rgb(0, 0, 0, 0.5), rgb(0, 0, 0, 0.5)), url("../images/skyrimwallpaper.jpg");
  background-size: cover;
  background-repeat: no-repeat;
}

.background-images-raft {
  background: linear-gradient(rgb(0, 0, 0, 0.5), rgb(0, 0, 0, 0.5)), url("../images/raftwallpaper.jpg");
  background-size: cover;
  background-repeat: no-repeat;
}

.container-flex {
  display: flex;
  padding: 30px;
  text-align: center;
}

.flex {
  display: flex;
}

.flex > * {
  border: none;
}

.image-triplegrid {
  margin-left: auto;
  margin-right: auto;
  width: 13.75rem;
  height: 8.75rem;
}

.image-triplegrid-style {
  margin-right: 0.7rem;
  margin-left: 0.7rem;
}

.universeofgames {
  color: #fff;
}

img .background {
  width: 100%;
}

/* Forms */

.header-form-group {
  display: flex;
}

.header-form-group > * {
  border: none;
}

.button {
  border-radius: 5px;
  text-align: center;
}

/* Text */

.pre-order-text {
  text-align: center;
  margin-bottom: 30px;
}

.all-games-anchor {
  text-decoration: none;
  position: relative;
  margin-right: 4rem;
  margin-top: 0;
  color: #fff;
}

.all-games-anchor:hover {
  text-decoration: underline;
}

.all-games-container {
  float: right;
}

.footer-anchors {
  display: block;
  margin-right: 4rem;
  margin-top: 0.5rem;
  text-align: left;
  color: #fff;
  text-decoration: none;
}

.footer-anchors:hover {
  text-decoration: underline;
}

.footer-anchor-div {
  margin-top: 3rem;
}

.footer-copyright {
  text-align: right;
  margin-top: 15rem;
}

.form-group {
  display: flex;
}

.form-group > * {
  border: none;
}

.footer-icons {
  margin-top: 2rem;
  font-size: 3rem;
  display: flex;
  gap: 0.5rem;
}

/* MEDIA QUERIES */

/* TABLET */

@media only screen and (max-width: 1280px) {
  .narrow {
    width: 80%;
  }

  .narrow h1 {
    width: 60%;
    font-size: 1.84rem;
    margin: 0 auto;
  }

  .narrow img {
    width: 90%;
    height: auto;
  }

  .comingsoon-container {
    padding-top: 2rem;
  }

  .universeofgames-container {
    display: none;
  }

  .searchbar-pos > button {
    width: 10%;
  }

  .container-flex {
    display: flex;
    flex-direction: column;
    text-align: center;
  }

  .image-triplegrid {
    margin-bottom: 1rem;
  }
}

/* MOBILE */
@media only screen and (max-width: 800px) {
  .narrow {
    width: 60%;
    justify-content: center;
  }

  .narrow h1 {
    width: 60%;
    font-size: 1.38rem;
    margin: 0 auto;
    justify-content: center;
  }

  .narrow img {
    width: 80%;
    height: auto;
  }

  .comingsoon-container {
    padding-top: 2rem;
  }

  .universeofgames-container {
    display: none;
  }

  .searchbar-pos > button {
    width: 20%;
  }

  .container-flex {
    display: flex;
    flex-direction: column;
    text-align: center;
  }

  .image-triplegrid {
    margin-bottom: 1rem;
  }
}

